--- a/apps/index.html
+++ b/apps/index.html
@@ -12,6 +12,6 @@
 <ul class="mainmenu">
 	<li><a href="http://new-qk.lifves.com/wap.php"><b><img src="https://www.lifves.com/favicon.ico"></b><span>期刊杂志</span></a></li>	
 	<li><a href="https://starhopec.gitee.io/vmusic/#/"><b><img src="https://zhaodecang.github.io/vmusic/static/img/Vue_Music_Blur.f29e504.png"></b><span>OnlineVMusic</span></a></li>	
-	<li><a href="http://139.170.150.23:81/qinghaiybapp-web/pages/person/main.jsp"><b><img src="./index_files/gjybj.png"></b><span>OnlineVMusic</span></a></li>		
+	<li><a href="http://139.170.150.23:81/qinghaiybapp-web/pages/person/main.jsp"><b><img src="./index_files/gjybj.png"></b><span>青海医保</span></a></li>		
 </ul>
 </body></html>
